--- a/marketing.html
+++ b/marketing.html
@@ -7,6 +7,7 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
     <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
+    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700" rel="stylesheet" type="text/css">
     <link href="assets/fonts/flaticon.css" rel="stylesheet" type="text/css">
     <link href="assets/css/responsive.css" rel="stylesheet" type="text/css">
@@ -15,11 +16,32 @@
     <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
 
 
 </head>
-<body class="bgMARKETING">
+<body class="bgpillars">
+    <header>
+        <div class="navBtn">
+        +
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="index.html#pillars">Services</a>
+            <a href="index.html#contact">Contact</a>
+            <hr>
+           OUR SERVICES
+            <hr>
+<a href="social.html">Social Media Management</a>
+<a href="marketing.html">Digital Marketing</a>
+<a href="lead.html">Lead Generation</a>
+<a href="webdev.html">Website Development</a>
+<a href="backend.html">Customer Support Back-End</a>
+<a href="frontend.html">Customer Support Front-End</a>
+
+        </nav>
+    </header>
     <div>
         <div class="fl-fl float-fb">
             <i class="fab fa-facebook fa-2x"></i> <a href="" target="_blank">Like us!</a>
@@ -35,34 +57,100 @@
         </div>
     </div>
     <div class="container">
-        <div class="section col s12 m10 l0 offset-l1">
+        <div class="section col s12 m10 l8 offset-l2">
             <div class="row">
                 <div class="layer" data-depth="0.3">
                     <div class="main">
-                        <div class="row">
-                            <div class="col s12 m6 l8 card">
-                                <div class="col s12 card-stacked">
-                                    <div class="card-content" style="color: black">
-                                        <h3 style="color: black; text-align: left">Digital Marketing</h3>
-                                        <p style="text-align: left">We develop customized digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. We keep our content and digital marketing strategies up-to-date with the latest marketing trends and technologies to give our clients the winning edge that they deserve.</p>
-                                        <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
-                                    <div data-collapse="collapse-content1"  data-text-close="Close">
-                                        <ul style="text-align: left">
-                                            <li>Develop and implement SEO and PPC strategies</li>
-                                            <li>Create and manage link building strategies, content marketing strategies, and social media presences</li>
-                                            <li>Innovate and present new marketing platforms and strategies</li>
-                                            <li>Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</li>
-                                            <li>Manage email and social media marketing campaigns</li>
-                                            <li>Use Google Analytics, Google AdWords, and other relevant sites</li>
-                                            <li>Drive traffic to client’s website</li>
-                                            <li>Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</li>
-                                            <li>Develop website and maintain (Purchasing of Domain and Hosting not included)</li>
-                                            <li>Inbound Marketing and Content Strategy</li>
-                                        </ul>
-                                    </div>    
+                        <!-- desktop -->
+                        <div class="hide-on-med-only hide-on-small-only" id='display_desktop'>
+                            <div class="col s12">
+                                <div class="card horizontal">
+                                <div class="card-image" id='marketing'></div>
+                                    <div class="col s12 card-stacked">
+                                        <div class="card-content" style="color: black">
+                                            <h3 style="color: black; text-align: left">Digital Marketing</h3>
+                                            <p style="text-align: left">We develop customized digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. We keep our content and digital marketing strategies up-to-date with the latest marketing trends and technologies to give our clients the winning edge that they deserve.</p>
+                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                                        <div data-collapse="collapse-content1"  data-text-close="Close">
+                                            <ul style="text-align: left">
+                                                <li>Develop and implement SEO and PPC strategies</li>
+                                                <li>Create and manage link building strategies, content marketing strategies, and social media presences</li>
+                                                <li>Innovate and present new marketing platforms and strategies</li>
+                                                <li>Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</li>
+                                                <li>Manage email and social media marketing campaigns</li>
+                                                <li>Use Google Analytics, Google AdWords, and other relevant sites</li>
+                                                <li>Drive traffic to client’s website</li>
+                                                <li>Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</li>
+                                                <li>Develop website and maintain (Purchasing of Domain and Hosting not included)</li>
+                                                <li>Inbound Marketing and Content Strategy</li>
+                                            </ul>
+                                        </div>    
+                                        <div class="card-action">
+                                            <span><a href="index.html#services">Let's Talk</a></span>
+                                        </div>
+                                        </div>
                                     </div>
-                                    <div class="card-action">
-                                        <span><a href="index.html#services">Let's Talk</a></span>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- tablet -->
+                        <div class="hide-on-small-only hide-on-large-only" id='display_tablet'>
+                            <div class="col s12">
+                                <div class="card horizontal">
+                                <div class="card-image" id='marketing'></div>
+                                    <div class="col s12 card-stacked">
+                                        <div class="card-content" style="color: black">
+                                            <h3 style="color: black; text-align: left">Digital Marketing</h3>
+                                            <p style="text-align: left">We develop customized digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. We keep our content and digital marketing strategies up-to-date with the latest marketing trends and technologies to give our clients the winning edge that they deserve.</p>
+                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                                        <div data-collapse="collapse-content1"  data-text-close="Close">
+                                            <ul style="text-align: left">
+                                                <li>Develop and implement SEO and PPC strategies</li>
+                                                <li>Create and manage link building strategies, content marketing strategies, and social media presences</li>
+                                                <li>Innovate and present new marketing platforms and strategies</li>
+                                                <li>Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</li>
+                                                <li>Manage email and social media marketing campaigns</li>
+                                                <li>Use Google Analytics, Google AdWords, and other relevant sites</li>
+                                                <li>Drive traffic to client’s website</li>
+                                                <li>Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</li>
+                                                <li>Develop website and maintain (Purchasing of Domain and Hosting not included)</li>
+                                                <li>Inbound Marketing and Content Strategy</li>
+                                            </ul>
+                                        </div>     
+                                        <div class="card-action">
+                                            <span><a href="index.html#services">Let's Talk</a></span>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div><!-- mobile -->
+                        <div class="hide-on-med-only hide-on-large-only" id='display_mobile'>
+                            <div class="col s12">
+                                <div class="card col s12">
+                                    <div class="col s12 card-stacked">
+                                        <div class="card-content" style="color: black">
+                                            <h3 style="color: black; text-align: left">Digital Marketing</h3>
+                                            <p style="text-align: left">We develop customized digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. We keep our content and digital marketing strategies up-to-date with the latest marketing trends and technologies to give our clients the winning edge that they deserve.</p>
+                                            <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
+                                        <div data-collapse="collapse-content1"  data-text-close="Close">
+                                            <ul style="text-align: left">
+                                                <li>Develop and implement SEO and PPC strategies</li>
+                                                <li>Create and manage link building strategies, content marketing strategies, and social media presences</li>
+                                                <li>Innovate and present new marketing platforms and strategies</li>
+                                                <li>Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</li>
+                                                <li>Manage email and social media marketing campaigns</li>
+                                                <li>Use Google Analytics, Google AdWords, and other relevant sites</li>
+                                                <li>Drive traffic to client’s website</li>
+                                                <li>Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</li>
+                                                <li>Develop website and maintain (Purchasing of Domain and Hosting not included)</li>
+                                                <li>Inbound Marketing and Content Strategy</li>
+                                            </ul>
+                                        </div>    
+                                        <div class="card-action">
+                                            <span><a href="index.html#services">Let's Talk</a></span>
+                                        </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -78,5 +166,13 @@
     <script src="assets/js/scrolloverflow.min.js"></script> 
     <script src="assets/js/jquery.fullPage.js"></script> 
     <script src="assets/js/jquery.fullpage.extensions.min.js"></script>
-    <script src="assets/js/readmore.js"></script> 
+    <script src="assets/js/readmore.js"></script>
+    <script src="assets/js/navbar.js"></script>  
+    <script >
+
+  $('.fixed-action-btn').openFAB();
+  $('.fixed-action-btn').closeFAB();
+  $('.fixed-action-btn.toolbar').openToolbar();
+  $('.fixed-action-btn.toolbar').closeToolbar()
+    </script>
 </html>
