--- a/Lead.html
+++ b/Lead.html
@@ -18,10 +18,9 @@
     <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
-
-
 </head>
 <body class="bgpillars">
+<!-- Side Nav -->    
     <header>
         <div class="navBtn">
         +
@@ -33,15 +32,15 @@
             <hr>
            OUR SERVICES
             <hr>
-<a href="social.html">Social Media Management</a>
-<a href="marketing.html">Digital Marketing</a>
-<a href="lead.html">Lead Generation</a>
-<a href="webdev.html">Website Development</a>
-<a href="backend.html">Customer Support Back-End</a>
-<a href="frontend.html">Customer Support Front-End</a>
-
+            <a href="social.html">Social Media Management</a>
+            <a href="marketing.html">Digital Marketing</a>
+            <a href="lead.html">Lead Generation</a>
+            <a href="webdev.html">Website Development</a>
+            <a href="backend.html">Customer Support Back-End</a>
+            <a href="frontend.html">Customer Support Front-End</a>
         </nav>
     </header>
+<!-- Floating Social Media Side nav -->
     <div>
         <div class="fl-fl float-fb">
             <i class="fab fa-facebook fa-2x"></i> <a href="" target="_blank">Like us!</a>
@@ -56,6 +55,7 @@
             <i class="fab fa-instagram fa-2x"></i> <a href="" target="_blank">Follow us</a>
         </div>
     </div>
+<!-- Contents Starts here -->
     <div class="container">
         <div class="section col s12 m10 l8 offset-l2">
             <div class="row">
