--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="RNR Developer Team" name="author">
-    <meta name="">
+    <meta name="author" content="RNR Developer Team">
+    <meta name="description" content="Digital marketing is an important aspect of your online business. We at Deegeelab specialise in providing tried and tested digital marketing services">
+    <meta name="keywords" content="Digital Marketing">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
+    <title>Deegeelab - Your Digital Marketing Specialist in Australia</title>
     <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
-    <!-- <link href="http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700" rel="stylesheet" type="text/css"> -->
     <link href="assets/fonts/flaticon.css" rel="stylesheet" type="text/css">
     <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/materialize.min.css" rel="stylesheet" type="text/css">
@@ -18,7 +18,6 @@
     <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
     <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
-
 </head>
 <body>    
     
