--- a/webdev.html
+++ b/webdev.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta content="RNR Developer Team" name="author">
-    <meta name="">
+    <meta name="author" content="RNR Developer Team">
+    <meta name="description" content="Website development is the combination of creativity, and technical proficiency. Deegeelab creates websites that can take any business to the next level.">
+    <meta name="keywords" content="Website Development">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>Deegeelab - Digital Marketing - SuperCharge Your Business</title>
+    <title>Deegeelab - Your Digital Marketing Specialist in Australia</title>
     <link href="assets/Logo/DeegeelabWhite.png" rel="icon">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600,700" rel="stylesheet" type="text/css">
@@ -18,8 +19,6 @@
     <link href="assets/css/socialfloat.css" rel="stylesheet" type="text/css">
     <link href="assets/css/navbar.css" rel="stylesheet" type="text/css">
     <link href="assets/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css" rel="stylesheet" type="text/css">
-
-
 </head>
 <body class="bgpillars">
     <header>
@@ -33,13 +32,12 @@
             <hr>
            OUR SERVICES
             <hr>
-<a href="social.html">Social Media Management</a>
-<a href="marketing.html">Digital Marketing</a>
-<a href="lead.html">Lead Generation</a>
-<a href="webdev.html">Website Development</a>
-<a href="backend.html">Customer Support Back-End</a>
-<a href="frontend.html">Customer Support Front-End</a>
-
+            <a href="social.html">Social Media Management</a>
+            <a href="marketing.html">Digital Marketing</a>
+            <a href="lead.html">Lead Generation</a>
+            <a href="webdev.html">Website Development</a>
+            <a href="backend.html">Customer Support Back-End</a>
+            <a href="frontend.html">Customer Support Front-End</a>
         </nav>
     </header>
     <div>
@@ -69,15 +67,18 @@
                                     <div class="col s12 card-stacked">
                                         <div class="card-content" style="color: black">
                                             <h3 style="color: black; text-align: left">Website Development</h3>
-                                            <p style="text-align: left">We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</p>
+                                            <p style="text-align: left">Offering high-quality products or services is just one half of the challenge that businesses face today. In the last five years, Australia’s online shopping industry has grown rapidly. For business owners, this means that is highly recommended to have a fully functional website where you can market your business or establish your brand.p>
                                             <a href="#" data-target="collapse-content1" data-text-more="" class="read-more">Read More</a>
                                         <div data-collapse="collapse-content1"  data-text-close="Close">
                                         <ul style="text-align: left">
-                                            <li>Content Marketing</li>
-                                            <li>Social Media Marketing</li>
-                                            <li>SEO</li>
-                                            <li>Website Optimization</li>
-                                            <li>Email Marketing</li>
+                                            <li>Mobile-responsive pages</li>
+                                            <li>Clear, concise and engaging written content</li>
+                                            <li>Well-formatted graphics content</li>
+                                            <li>Working clickable elements</li>
+                                            <li>Secured data and payment channels</li>
+                                            <li>Quick and smooth page navigation</li>
+                                            <li>Clean and up-to-date code</li>
+                                            <li>Consistently fast loading time</li>
                                         </ul>
                                         </div>   
                                         <div class="card-action">
